# cityhive

./: .coderabbit.yaml  .dockerignore  .env.example  .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  alembic.ini  cityhive.code-workspace  docker-compose.yml  entrypoint.sh  pyproject.toml
.cursor/: mcp.json  postgres.py
.cursor/rules/: ai-collaboration.mdc  always-enable-context7.mdc  cursor-rules.mdc  dependency-management.mdc  project-overview.mdc  project-patterns.mdc  project-structure.mdc  python-coding-standards.mdc  python-standards.mdc  testing-guidelines.mdc
.github/workflows/: auto-approve.yml  ci.yml
cityhive/: models.py
cityhive/app/: __init__.py  __main__.py  app.py  db.py  middlewares.py  routes.py  typedefs.py  views.py
cityhive/app/helpers/: __init__.py  request.py  validation.py
cityhive/app/routes/: __init__.py  api.py  hives.py  inspections.py  main.py  monitoring.py  users.py  web.py
cityhive/app/views/: __init__.py  api.py  hives.py  inspections.py  monitoring.py  users.py  web.py
cityhive/domain/: health.py  models.py
cityhive/domain/health/: __init__.py  exceptions.py  models.py  repository.py  service.py
cityhive/domain/hive/: __init__.py  exceptions.py  repository.py  service.py
cityhive/domain/inspection/: __init__.py  exceptions.py  repository.py  service.py
cityhive/domain/services/: __init__.py  health.py  hive.py  user.py
cityhive/domain/user/: __init__.py  exceptions.py  repository.py  service.py
cityhive/infrastructure/: config.py  db.py  logging.py  typedefs.py
cityhive/templates/: 404.html  500.html  base.html  index.html
docs/: ai-integration.md  architecture.md  coding-standards.md  development.md  logging.md  technology-stack.md
migration/: env.py  script.py.mako
migration/versions/: 2025_06_07_130748_create_user_model.py  2025_06_07_133350_drop_timestapmixin_as_no_longer_needed.py  2025_06_07_143005_add_hive_model_with_postgis_location.py  2025_06_07_154623_add_sensor_model_with_hive_relationship.py  2025_06_07_160830_add_sensorreading_model_with_sensor_.py  2025_06_07_161831_add_inspection_model_with_hive_.py  2025_06_07_162431_add_harvest_model_with_hive_.py  2025_06_07_201938_rename_sensor_type_column_to_sensor_type.py
scripts/: check_no_classes_in_init.py  db_connection_info.py  init-postgis.sql  wait_for_db.py
tests/: conftest.py
tests/integration/: conftest.py  test_app_integration.py
tests/unit/: conftest.py
tests/unit/app/: test_api_views.py  test_main.py  test_middlewares.py
tests/unit/app/helpers/: test_request.py  test_validation.py
tests/unit/app/routes/: test_hives.py  test_main.py  test_monitoring.py  test_users.py  test_web.py
tests/unit/app/views/: conftest.py  test_api.py  test_hives.py  test_inspections.py  test_monitoring.py  test_users.py
tests/unit/domain/health/: test_exceptions.py  test_repository.py  test_service.py
tests/unit/domain/hive/: test_exceptions.py  test_repository.py  test_service.py
tests/unit/domain/inspection/: test_exceptions.py  test_input_validation.py  test_repository.py  test_service.py
tests/unit/domain/services/: test_health.py  test_hive_service.py
tests/unit/domain/user/: test_exceptions.py  test_repository.py  test_service.py
tests/unit/infrastructure/: test_config.py  test_logging.py
