[project]
name = "cityhive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp-jinja2>=1.6",
    "aiohttp[speedups]>=3.12.7",
    "alembic[tz]>=1.16.1",
    "asyncpg>=0.30.0",
    "pyyaml>=6.0.2",
    "sqlalchemy[asyncio]>=2.0.41",
    "trafaret-config>=2.0.2",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.14",
    "fastmcp>=2.7.0",
    "mcp[cli]>=1.9.3",
    "pre-commit>=4.2.0",
    "ruff>=0.11.12",
]
testing = [
    "coverage[toml]>=7.8.2",
    "pytest>=8.4.0",
    "pytest-aiohttp>=1.1.0",
    "pytest-asyncio>=1.0.0",
]
