[project]
name = "cityhive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp-jinja2>=1.6",
    "aiohttp[speedups]>=3.12.7",
    "alembic[tz]>=1.16.1",
    "asyncpg>=0.30.0",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "sqlalchemy[asyncio]>=2.0.41",
    "trafaret-config>=2.0.2",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.14",
    "fastmcp>=2.7.0",
    "mcp[cli]>=1.9.3",
    "pre-commit>=4.2.0",
    "ruff>=0.11.12",
]
testing = [
    "coverage[toml]>=7.8.2",
    "pytest>=8.4.0",
    "pytest-aiohttp>=1.1.0",
    "pytest-asyncio>=1.0.0",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = [
    "I",      # All imports
    "E",      # All errors
    "W",      # All warnings
    "F",      # All false positives
    "C",      # All complexity
    "Q",      # All quality
    "UP006",  # Enforcing the use of PEP 585 syntax
    "UP007",  # Enforcing the use of PEP 604 syntax
    "RET505", # Unnecessary `else` after `return` statement
    "B006",   # Do not use mutable data structures for argument defaults
    "B904",   # Use `raise ... from err` instead of `raise ...`
    "B905",   # Specify `strict` when using `zip()`
    "G004",   # Don't use f-strings for string interpolation in logging
]

ignore = [
    "E402", # module level import not at top of file
]

[tool.ruff.lint.isort]
known-first-party = ["cityhive"]
